--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Publish docs via GitHub Pages
 on:
   push:
     branches:
-      - master
-    tags:
-      - makedoku
+        master
+        tags:
+            - makedoku
 
 jobs:
   build:
