fixed mkdocs config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: Publish docs via GitHub Pages
 on:
   push:
-    branches:
-        - master
-        tags:
-            - makedoku
+    tags:
+    - makedocs
 
 jobs:
   build:
