--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,11 @@
 site_name: ALADIN-M
 
+theme: readthedocs
+
+nav:
+  - Start: index.md
+  - The algorithm: ALADIN.md
+
 markdown_extensions:
   - codehilite
   - pymdownx.arithmatex
@@ -21,7 +27,7 @@ markdown_extensions:
 
 extra_javascript:
   - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
-  
 
-theme: readthedocs
+
+
 
