added code structure site

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,14 +27,15 @@ markdown_extensions:
   - pymdownx.magiclink
   - pymdownx.mark
   - pymdownx.smartsymbols
-  - pymdownx.superfences
+  - pymdownx.superfences:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
 
+plugins:
+  - markdownmermaid
+
 extra_javascript:
-  - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
-
-
-
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML
+  - https://unpkg.com/mermaid@7.1.2/dist/mermaid.min.js
 
