--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     name: Deploy docs
     runs-on: ubuntu-latest
     steps:
+      - name: Install dependencies
+        run:  pip install mkdocs-mermaid-plugin
       - name: Checkout master
         uses: actions/checkout@v1
 
