added communication count, revised solver output, closes #59, closes #76

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,8 @@ nav:
   - Start: index.md
   - The algorithm: ALADIN.md
   - Code structure: codeStruct.md
+  - Parallel Computing: ParallelExample.md
+  - Distributed MPC: robotEx.md
 
 markdown_extensions:
   - codehilite
