excluded mermaid plugin to make github actions work

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,8 +38,8 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.tilde
 
-plugins:
-  - markdownmermaid
+#plugins:
+#  - markdownmermaid
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML
