--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Install dependencies
         run:  pip install mkdocs-mermaid-plugin
+        run:  pip install mkdocs-material
       - name: Checkout master
         uses: actions/checkout@v1
 
