--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
         run:  pip3 install mkdocs-mermaid-plugin
       - name: Install dependencies2
         run:  pip3 install mkdocs-awesome-pages-plugin
+      - name: Install dependencies3
+        run:  pip install awesome-pages
       - name: Checkout master
         uses: actions/checkout@v1
 
