--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4 
+        with:
+            python-version: '3.11.2' 
       - name: Install dependencies
         run:  pip3 install mkdocs-mermaid-plugin
       - name: Install dependencies2
